[package]
name = "rust-audio-analyser"
version = "0.1.1"
authors = ["Nigel Gray <nigelgray@gmail.com>"]
edition = "2018"

[dependencies]
cpal = "0.11.0"
hound = "3.4.0"
failure = "0.1.6"
rustfft = "3.0.1"
num = "0.2.0"
plotlib = "0.4.0"
csv = "1.1.2"

[features]
default = ["default_card"]
default_card = []
